--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,3 +6,17 @@ jobs:
     steps:
       - name: my-step
         run: echo "Hello World!"
+    steps:
+       - name: HashiCorp - Setup Terraform
+  # You may pin to the exact commit or the version.
+  # uses: hashicorp/setup-terraform@633666f66e0061ca3b725c73b2ec20cd13a8fdd1
+  uses: hashicorp/setup-terraform@v2.0.3
+  with:
+    # The hostname of a Terraform Cloud/Enterprise instance to place within the credentials block of the Terraform CLI configuration file. Defaults to `app.terraform.io`.
+    cli_config_credentials_hostname: # optional, default is app.terraform.io
+    # The API token for a Terraform Cloud/Enterprise instance to place within the credentials block of the Terraform CLI configuration file.
+    cli_config_credentials_token: # optional
+    # The version of Terraform CLI to install. Instead of full version string you can also specify constraint string starting with "<" (for example `<1.13.0`) to install the latest version satisfying the constraint. A value of `latest` will install the latest version of Terraform CLI. Defaults to `latest`.
+    terraform_version: # optional, default is latest
+  
+          
